--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,12 @@
   "background": {
     "service_worker": "update.js"
   },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["contentScript.js"]
+    }
+  ],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
